@@ -1,6 +1,5 @@
 Revision history for Gimp-Perl extension.
 
-	- updated burst <sjburges@gimp.org>
 1.20
 	- image types updated to reflect gimp's reality.
         - updated perlotine.
@@ -29,6 +28,8 @@ Revision history for Gimp-Perl extension.
           target.
         - do not install scripts depending on Gtk.
         - do not register menus when Gtk is needed for dialogs.
+        - updated examples/burst.
+        - fixed various old-syntax leftovers in Gimp::Util.
 
 1.19  Thu Jan  6 00:21:58 CET 2000
         - used N_ to mark all the menu paths, since gimp now tries to
